fixed the css of the success stories and the task manager and fixed the collapsed sidebar

--- a/frontend/src/styles/SuccessStories.css
+++ b/frontend/src/styles/SuccessStories.css
@@ -19,17 +19,20 @@
      padding: 60px 20px;
      max-width: 1200px;
      margin: 0 auto;
-     background-color: white;
      width: 100%;
  }
 
  .success-stories h1 {
      text-align: center;
      font-size: 2.5rem;
-     margin-bottom: 20px;
      color: #2c3e50;
      font-weight: 700;
+     margin-bottom: 0 !important;
  }
+
+.success-stories-header p{
+    color: #626A84;
+}
 
  .section-description {
      text-align: center;
